CREATE TABLE contracts (
    id              BIGINT AUTO_INCREMENT PRIMARY KEY,
    contract_id     VARCHAR(255)   NOT NULL UNIQUE,
    listing_id      VARCHAR(255)   NOT NULL,
    seller_id       VARCHAR(255)   NOT NULL,
    buyer_id        VARCHAR(255)   NOT NULL,
    product_name    VARCHAR(255)   NOT NULL,
    buyer_org_name  VARCHAR(255)   NOT NULL,
    seller_org_name VARCHAR(255)   NOT NULL,
    buyer_email     VARCHAR(255)   NOT NULL,
    seller_email    VARCHAR(255)   NOT NULL,
    quantity        DECIMAL(15,3)  NOT NULL,
    quantity_unit   VARCHAR(50)    NOT NULL,
    agreed_price    DECIMAL(15,2)  NOT NULL,
    currency        VARCHAR(10)    NOT NULL,
    delivery_deadline DATE         NOT NULL,
    penalty_rate    DECIMAL(10,4),
    quality_spec    TEXT,
    status          VARCHAR(30)    NOT NULL,
    cancel_reason   TEXT,
    cancelled_by    VARCHAR(10),
    signatories     TEXT,
    created_at      DATETIME       NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at      DATETIME       NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,

    INDEX idx_buyer_id  (buyer_id),
    INDEX idx_seller_id (seller_id),
    INDEX idx_status    (status)
);
